--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,4 +200,46 @@ h1,h2,h3,h4,h5,h6{
     width: 100%;
     max-width: 950px;
     margin: 0 auto 40px;
+
+    text-align: center;
+}
+
+.section-suptitle {
+    font-family: "Kaushan Script", cursive;
+    font-size: 24px;
+    color: #333333;
+}
+
+.section-title {
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #333333;
+}
+
+.section-title::after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    margin: 30px auto;
+
+    background-color: #ffa7a7;
+}
+
+.section-text {
+    font-size: 16px;
+    color: #777777;
+}
+
+/* About */
+
+.about {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-item {
+    width: 32%;
+    
 }
